--- a/index.html
+++ b/index.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assents/style.css">
-    <title>flashcard</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Flashcard</title>
+<link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <main>
-      <section id="container">
-       <article class="cartao"> 
-        <div class="cartao__conteudo">
-        <h3 class="progamacao">programação</h3>
-        <div class="cartao__conteudo__pergunta">
-          o que é javascript?
-        </div>
-        <div class="carta__conteido__resposta">
-         o javascript é uma linguagemde progamação
-        </div>
-        </div>
-      </article>
-      <article class="cartao"> 
-        <div class="cartao__conteudo">
-        <h3 class="progamacao">programação</h3>
-        <div class="cartao__conteudo__pergunta">
-          o que é css?
-        </div>
-        <div class="carta__conteido__resposta">
-        o css é uma linguagem de etilização
-        </div>
-        </div>
+<main>
 
-      </article>
-      
-      
-      </section>
-    </main>
-    <footer>
-        <p>Projeto desenvolvido pelos alunos do 2° ano, do pinhalsinho, com base na Alura</p>
-    </footer>
+</main>
+<section id="container">
+<article class="cartao">
+<div class="cartao__conteudo">
+<h3 class="programacao">Programação</h3>
+<div class="cartao__conteudo__pergunta">
+<p> O que é Javascript? </p>
+</div>
+<div class="cartao__conteudo__resposta">
+<p> O Javascript é uma linguagem de programação. </p>
+</div>
+</div>
+
+</article>
+<article class="cartao">
+<div class="cartao__conteudo">
+<h3 class="programacao">Programação</h3>
+<div class="cartao__conteudo__pergunta">
+<p> O que é CSS? </p>
+</div>
+<div class="cartao__conteudo__resposta">
+<p> O CSS é uma linguagem de estilização. </p>
+</div>
+</div>
+
+</article>
+
+</section>
+<footer>
+<p>Projeto desenvolvido pelos alunos do 2º ano, do Pinhalzinho, com base na Alura</p>
+</footer>
 </body>
 </html>
