--- a/index.html
+++ b/index.html
@@ -1,44 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Flashcard</title>
-<link rel="stylesheet" href="assets/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flashcard</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-<main>
+   <main>
 
-</main>
-<section id="container">
+   </main>
+   <section id="container">
 <article class="cartao">
-<div class="cartao__conteudo">
-<h3 class="programacao">Programação</h3>
-<div class="cartao__conteudo__pergunta">
-<p> O que é Javascript? </p>
-</div>
-<div class="cartao__conteudo__resposta">
-<p> O Javascript é uma linguagem de programação. </p>
-</div>
-</div>
-
-</article>
-<article class="cartao">
-<div class="cartao__conteudo">
-<h3 class="programacao">Programação</h3>
-<div class="cartao__conteudo__pergunta">
-<p> O que é CSS? </p>
-</div>
-<div class="cartao__conteudo__resposta">
-<p> O CSS é uma linguagem de estilização. </p>
-</div>
-</div>
+    <div class="cartao__conteudo">
+        <h3 class="programacao">Geografia</h3>
+        <div class="cartao__conteudo__pergunta">
+           <p> Qual o país que possue o maior IDH do mundo?</p>
+        </div>
+        <div class="cartao__conteudo__resposta">
+           <p> Suíça</p>
+        </div>
+    </div>
 
 </article>
 
-</section>
-<footer>
-<p>Projeto desenvolvido pelos alunos do 2º ano, do Pinhalzinho, com base na Alura</p>
-</footer>
+   </section>
+   <footer>
+    <p>Projeto desenvolvido pelos alunos do 2º ano, do Pinhalzinho, com base na Alura</p>
+   </footer> 
+
+
+   <script src="app.js"></script>
+
+   <script src="pergunta.js"></script>
+
 </body>
 </html>
+
